Fix large time display overflow

--- a/client/css/about/info.css
+++ b/client/css/about/info.css
@@ -18,13 +18,9 @@
 }
 
 #profile-link,
-.la-github,
+.external-link,
 #contact-me>a {
     color: var(--dark-color);
-}
-
-.la-github {
-    text-decoration: none;
 }
 
 @media only screen and (max-width: 745px) {
